syntax = "proto3";
// tenant 租户
package tenant;
option go_package = "cloud/service/tenant;tenant";
import "google/protobuf/timestamp.proto";
import "pagination.proto";

// TenantObject 数据对象
message TenantObject {
	// @inject_tag: gorm:"primaryKey;autoIncrement;column:id" json:"id"
	optional int64 id = 1; //编号
	// @inject_tag: gorm:"column:name" json:"name"
	optional string name = 2; //名称
	// @inject_tag: gorm:"column:user_id" json:"userId"
	optional int64 user_id = 3; //用户
	// @inject_tag: gorm:"column:contact_name" json:"contactName"
	optional string contact_name = 4; //联系人
	// @inject_tag: gorm:"column:contact_mobile" json:"contactMobile"
	optional string contact_mobile = 5; //联系电话
	// @inject_tag: gorm:"column:expire_date" json:"expireDate"
	google.protobuf.Timestamp expire_date = 6; //过期时间
	// @inject_tag: gorm:"column:account_total" json:"accountTotal"
	optional int64 account_total = 7; //账号数量
	// @inject_tag: gorm:"column:package_id" json:"packageId"
	optional int64 package_id = 8; //套餐编号
	// @inject_tag: gorm:"column:status" json:"status"
	optional int32 status = 9; //状态:0正常/1停用
	// @inject_tag: gorm:"column:deleted" json:"deleted"
	optional int32 deleted = 10; //删除:0否/1是
	// @inject_tag: gorm:"column:creator" json:"creator"
	optional string creator = 11; //创建人
	// @inject_tag: gorm:"column:create_time" json:"createTime"
	google.protobuf.Timestamp create_time = 12; //创建时间
	// @inject_tag: gorm:"column:updater" json:"updater"
	optional string updater = 13; //更新人
	// @inject_tag: gorm:"column:update_time" json:"updateTime"
	google.protobuf.Timestamp update_time = 14; //更新时间
}
// TenantTotalResponse 列表数据总量
message TenantTotalResponse {
	int64 code = 1;
	string msg = 2;
	int64 data = 3;
}
// TenantCreateRequest 创建数据请求
message TenantCreateRequest {
	TenantObject data = 1;
}
// TenantCreateResponse 创建数据响应
message TenantCreateResponse {
	int64 code = 1;
	string msg = 2;
	int64 data = 3;
}
// TenantUpdateRequest 更新数据请求
message TenantUpdateRequest {
	// @inject_tag: gorm:"column:id" json:"id"
	int64 id = 1; //编号
	TenantObject data = 2;
}
// TenantUpdateResponse 更新数据响应
message TenantUpdateResponse {
	int64 code = 1;
	string msg = 2;
}
// TenantDeleteRequest 删除数据请求
message TenantDeleteRequest {
	// @inject_tag: gorm:"column:id" json:"id"
	int64 id = 1; //编号
}
// TenantDeleteResponse 删除数据响应
message TenantDeleteResponse {
	int64 code = 1;
	string msg = 2;
}
// TenantRequest 查询单条数据请求
message TenantRequest {
	// @inject_tag: gorm:"column:id" json:"id"
	int64 id = 1; //编号
}
// TenantResponse 查询单条数据响应
message TenantResponse {
	int64 code = 1;
	string msg = 2;
	TenantObject data = 3;
}
// TenantRecoverRequest 恢复数据请求
message TenantRecoverRequest {
	// @inject_tag: gorm:"column:id" json:"id"
	int64 id = 1; //编号
}
// TenantRecoverResponse 删除数据响应
message TenantRecoverResponse {
	int64 code = 1;
	string msg = 2;
}
// TenantDropRequest 清理数据请求
message TenantDropRequest {
	// @inject_tag: gorm:"column:id" json:"id"
	int64 id = 1; //编号
}
// TenantDropResponse 清理数据响应
message TenantDropResponse {
	int64 code = 1;
	string msg = 2;
}
// TenantListRequest 列表数据
message TenantListRequest {
	
	// @inject_tag: db:"package_id" json:"packageId"
	optional int64 package_id = 1; // 套餐编号
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 2; // 删除:0否/1是
	// @inject_tag: db:"status" json:"status"
	optional int32 status = 3; // 状态:0正常/1停用
	// @inject_tag: db:"name" json:"name"
	optional string name = 4; // 名称
	// @inject_tag: db:"expire_date" json:"expireDate"
	google.protobuf.Timestamp expire_date = 5; // 过期时间

	// @inject_tag: json:"pagination"
	optional pagination.PaginationRequest pagination = 6; // 分页
}

// TenantListResponse 数据响应
message TenantListResponse {
	int64 code = 1;
  	string msg = 2;
	repeated TenantObject data = 3;
}
// TenantListTotalRequest 列表数据
message TenantListTotalRequest {
	
	// @inject_tag: db:"package_id" json:"packageId"
	optional int64 package_id = 1; // 套餐编号
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 2; // 删除:0否/1是
	// @inject_tag: db:"status" json:"status"
	optional int32 status = 3; // 状态:0正常/1停用
	// @inject_tag: db:"name" json:"name"
	optional string name = 4; // 名称
	// @inject_tag: db:"expire_date" json:"expireDate"
	google.protobuf.Timestamp expire_date = 5; // 过期时间

}


// TenantService 服务
service TenantService{
	rpc TenantCreate(TenantCreateRequest) returns (TenantCreateResponse);
	rpc TenantUpdate(TenantUpdateRequest) returns (TenantUpdateResponse);
	rpc TenantDelete(TenantDeleteRequest) returns (TenantDeleteResponse);
	rpc Tenant(TenantRequest) returns (TenantResponse);
	rpc TenantRecover(TenantRecoverRequest) returns (TenantRecoverResponse);
	rpc TenantDrop(TenantDropRequest) returns (TenantDropResponse);
	rpc TenantList(TenantListRequest) returns (TenantListResponse);
	rpc TenantListTotal(TenantListTotalRequest) returns (TenantTotalResponse);
}